fix gutter on mobile

--- a/src/stylus/components/_grid.styl
+++ b/src/stylus/components/_grid.styl
@@ -10,9 +10,6 @@
     @media only screen and (min-width: $width)
       max-width: ($width * 0.9375) // Credit to bootstrap
 
-  @media $display-breakpoints.xs-only
-    padding: $grid-gutters.xl
-
   &.fluid
     max-width: 100%
 
